--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+@import url('https://fonts.googleapis.com/css?family=Sarabun:400,700');
+
+body {
+    font-family: 'Sarabun', sans-serif;
+}
 
 .nav-wrapper {
     text-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
