--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,13 @@ body {
     margin: 5px 10px;
 }
 
+.section-contact h5 {
+    margin-bottom: 30px;
+}
+
 .autocomplete-content {
     position: absolute;
     width: 100%;
     text-align: center;
 }
+
